--- a/BackgroundTask.Demo/BackgroundTask.Demo.csproj
+++ b/BackgroundTask.Demo/BackgroundTask.Demo.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Selenium.WebDriver.UndetectedChromeDriver" Version="2.3.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
